# ComfyUI_CogView4_Wrapper

./: README.md  __init__.py  pyproject.toml  requirements.txt
py/: cogview4.py
